--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,19 @@
   --color-accent: #0077cc;
 }
 
+@media (max-width: 768px) {
+    :root {
+
+    --space-xs: 0.1rem;
+    --space-sm: 0.25rem;
+    --space-md: 0.5rem;
+    --space-lg: 1rem;
+    --space-xl: 2rem;
+
+    }
+
+}
+
 
 
 body {
@@ -46,10 +59,24 @@ header {
     align-items: center;
     
 }
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+
+}
 
 h1 {
    margin-left: 10%;
    margin-right: auto;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        margin: var(--space-sm) 0;
+
+    }
+
 }
 
 nav {
@@ -63,6 +90,7 @@ nav {
     margin-right: 10%;
 
 }
+
 
 
 .navLink {
@@ -81,6 +109,17 @@ nav {
     background-color: var(--color-accent);
 }
 
+@media (max-width: 768px) {
+   nav {
+        margin-left: 0;
+        margin-right: 0;
+   }
+
+   .navLink {
+        margin: var(--space-md);
+   }
+
+}
 main {
     background: var(--color-bg);
     flex: 1;
@@ -101,6 +140,7 @@ main {
     
 }
 
+
 .project {
     display: flex;
     flex-direction: column;
@@ -113,6 +153,18 @@ main {
     overflow: clip;
     border-radius: 15px;
 
+}
+
+@media (max-width: 768px) {
+    #projectGrid {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project {
+        width: 90%;
+        height: fit-content;
+    }
 }
 
 .projLink {
@@ -134,6 +186,13 @@ main {
     background-color: var(--color-accent);
 }
 
+.contactContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .contact {
     display: flex;
@@ -149,6 +208,16 @@ main {
     font-size: large;
     line-height: 2;
 }
+li {
+    margin: var(--space-md);
+}
+@media (max-width: 768px) {
+
+    li {
+        margin: var(--space-lg);
+    }
+
+}
 
 p {
     width: 90%;
@@ -161,4 +230,10 @@ p {
     width: 40%;
     height: fit-content;
     border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+    .imgMed {
+        width: 70%;
+    }
 }
