--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ body {
     font-family: "Inter", "Segoe UI", "Roboto", "Helvetica Neue", sans-serif;
 
     height: 100vh;
+    height: 100svh;
     margin: 0;
     
 }
