--- a/css/main.css
+++ b/css/main.css
@@ -233,8 +233,26 @@ p {
     border-radius: 5px;
 }
 
+.imgWide {
+    width: 85%; 
+    height: fit-content; 
+    border-radius: 5px;
+}
+
+/*this is only meant to be a row on computer, not mobile*/
+.rowImgContainer { 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 @media (max-width: 768px) {
     .imgMed {
-        width: 70%;
+        width: 85%;
     }
+    .rowImgContainer {
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
